# vehicle-trajectory-behavior-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
data/: README.md
data/sample/: sample_trajectories.csv
notebooks/: 01_exploratory_trajectory_analysis.ipynb  02_rate_limited_batch_trainer.ipynb  03_continuous_learning_pipeline.ipynb
results/: classification_report.json  confusion_matrix.csv  metrics.csv
scripts/: generate_assets.py  generate_sample_data.py  run_on_real_data.py  setup_env.sh  train_all_models.sh
src/vehicle_behavior/: __init__.py  config.py  data.py  evaluate.py  features.py  model.py  predict.py  train.py
src/vehicle_trajectory_behavior_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_features.py  test_model_shapes.py  test_preprocessing.py
