[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-trajectory-behavior-classifier"
version = "0.1.0"
description = "CNN-LSTM pipeline for classifying driving behavior from vehicle trajectories"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<2.2",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "tensorflow>=2.19",
  "matplotlib>=3.7",
  "joblib>=1.3",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
box = ["boxsdk[jwt]>=3.14"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
